[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/poppins.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Fonts/Poppins-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/Healthbar/HP.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.898039, 0.368627, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.623529, 0.901961, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.243137, 0.858824, 0.25098, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="HP" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HealthbarUnder" type="ProgressBar" parent="."]
margin_right = 560.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
step = 100.0
value = 300.0
percent_visible = false

[node name="HealthbarOver" type="ProgressBar" parent="."]
margin_right = 560.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.121569, 0.956863, 0.901961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
step = 100.0
value = 300.0
percent_visible = false

[node name="HPLabel" type="Label" parent="."]
margin_left = 278.0
margin_right = 332.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.0666667, 0.141176, 0.145098, 1 )
custom_fonts/font = SubResource( 4 )
text = "50%"
align = 1
valign = 1

[connection signal="value_changed" from="HealthbarUnder" to="." method="_on_Healthbar_value_changed"]
[connection signal="value_changed" from="HealthbarOver" to="." method="_on_Healthbar_value_changed"]
